[bumpversion]
current_version = 0.0.1
commit = true
tag = true
tag_name = {new_version}

[tool:pytest]
minversion = 3.0
strict = true
testpaths = tests

[wheel]
universal = 1

[flake8]
max-line-length = 99

[bumpversion:file:setup.py]

[bumpversion:file:src/__init__.py]

[coverage:run]
branch = True
source =
	telegram_broker

[coverage:paths]
source =
	src/telegram_broker
	.tox/*/lib/python*/site-packages/telegram_broker
	.tox/pypy*/site-packages/telegram_broker

[coverage:report]
show_missing = True

[metadata]
description-file = README.rst

[bdist_wheel]
universal=1
